--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,11 +16,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://main.tscn"]
+open_scenes=["res://main.tscn", "res://player.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://ball_move_control.gd", "res://bar1_breath_control.gd", "res://breath_control.gd", "res://global_variables.gd"]
+open_scripts=["res://ball_move_control.gd", "res://bar1_breath_control.gd", "res://breath_control.gd", "res://global_variables.gd", "res://player.gd", "res://trigger_controler.gd"]
 open_help=[]
 script_split_offset=70
 list_split_offset=0
