Basic saving and loading system
Basis structure and test for saving system

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,11 +16,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://player.tscn", "res://main.tscn", "res://blackjack_scene.tscn", "res://king_of_diamonds_scene.tscn"]
+open_scenes=["res://main.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://ball_move_control.gd", "res://bar1_breath_control.gd", "res://breath_control.gd", "res://draw_blackjack.gd", "res://global_variables.gd", "res://king_of_diamonds.gd", "res://player.gd", "res://stop_blackjack.gd", "res://trigger_controler.gd"]
-open_help=[]
+open_scripts=["res://SaveAndLoad/GameData.gd", "res://global_variables.gd", "res://Inventory/Inventory.gd", "res://player.gd", "res://SaveAndLoad/SaveLoadData.gd", "res://SaveAndLoad/save_test.gd"]
+open_help=["@GDScript"]
 script_split_offset=70
 list_split_offset=0
