--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,5 +1,11 @@
 list=Array[Dictionary]([{
 "base": &"Resource",
+"class": &"GameData",
+"icon": "",
+"language": &"GDScript",
+"path": "res://SaveAndLoad/GameData.gd"
+}, {
+"base": &"Resource",
 "class": &"InventoryData",
 "icon": "",
 "language": &"GDScript",
@@ -10,6 +16,12 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://Inventory/item_data.gd"
+}, {
+"base": &"Resource",
+"class": &"SaveLoadData",
+"icon": "",
+"language": &"GDScript",
+"path": "res://SaveAndLoad/SaveLoadData.gd"
 }, {
 "base": &"Resource",
 "class": &"SlotData",
