--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,7 +20,7 @@ open_scenes=["res://main.tscn", "res://Inventory/inventory.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://breath_control.gd", "res://SaveAndLoad/GameData.gd", "res://global_variables.gd", "res://Inventory/Inventory.gd", "res://Inventory/inventory_data.gd", "res://Inventory/item_data.gd", "res://player.gd", "res://SaveAndLoad/SaveLoadData.gd", "res://SaveAndLoad/save_test.gd", "res://Inventory/slot.gd", "res://Inventory/slot_data.gd"]
+open_scripts=["res://SaveAndLoad/GameData.gd", "res://global_variables.gd", "res://Inventory/Inventory.gd", "res://Inventory/inventory_data.gd", "res://SaveAndLoad/SaveLoadData.gd", "res://SaveAndLoad/save_test.gd"]
 open_help=[]
 script_split_offset=70
 list_split_offset=0
