--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,11 +16,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://main.tscn", "res://Stages/StageManager.tscn", "res://Stages/main_menu.tscn", "res://Stages/PauseMenu.tscn"]
+open_scenes=["res://main.tscn", "res://Stages/StageManager.tscn", "res://Stages/main_menu.tscn", "res://Stages/PauseMenu.tscn", "res://Stages/Intro.tscn", "res://player.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://SaveAndLoad/GameData.gd", "res://global_variables.gd", "res://Inventory/Inventory.gd", "res://Inventory/inventory_data.gd", "res://Stages/main_menu.gd", "res://Stages/PauseMenu.gd", "res://SaveAndLoad/SaveLoadData.gd", "res://SaveAndLoad/save_test.gd", "res://Stages/StageManager.gd"]
+open_scripts=["res://ball_move_control.gd", "res://SaveAndLoad/GameData.gd", "res://global_variables.gd", "res://Stages/Intro.gd", "res://Inventory/Inventory.gd", "res://Inventory/inventory_data.gd", "res://Stages/main_menu.gd", "res://Stages/PauseMenu.gd", "res://player.gd", "res://SaveAndLoad/SaveLoadData.gd", "res://SaveAndLoad/save_test.gd", "res://Stages/StageManager.gd"]
 open_help=[]
 script_split_offset=70
 list_split_offset=0
