Integrated inventory system and codex reading to the current build
If the save and load script is loaded somewhere the script stops working. Still checking for a fix.

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,11 +16,11 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://main.tscn", "res://Inventory/slot.tscn"]
+open_scenes=["res://main.tscn", "res://Inventory/letter_viewer.tscn"]
 
 [ScriptEditor]
 
-open_scripts=["res://Inventory/Inventory.gd", "res://Inventory/inventory_data.gd", "res://Inventory/inventory_interface.gd", "res://main.gd", "res://player.gd", "res://SaveAndLoad/save_test.gd", "res://Inventory/slot.gd", "res://Inventory/slot_data.gd"]
+open_scripts=["res://global_variables.gd", "res://Inventory/Inventory.gd", "res://Inventory/inventory_data.gd", "res://Inventory/inventory_interface.gd", "res://Inventory/item_data.gd", "res://Inventory/letter.gd", "res://Inventory/letters.gd", "res://Inventory/letter_viewer.gd", "res://main.gd", "res://InteractableItems/pick_up_item.gd", "res://player.gd", "res://SaveAndLoad/save_test.gd", "res://Inventory/slot.gd", "res://Inventory/slot_data.gd"]
 open_help=[]
 script_split_offset=70
 list_split_offset=0
