--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -18,6 +18,18 @@ list=Array[Dictionary]([{
 "path": "res://Inventory/item_data.gd"
 }, {
 "base": &"Resource",
+"class": &"LetterData",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Inventory/letter.gd"
+}, {
+"base": &"Resource",
+"class": &"LettersData",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Inventory/letters.gd"
+}, {
+"base": &"Resource",
 "class": &"SaveLoadData",
 "icon": "",
 "language": &"GDScript",
