--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -16,7 +16,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=["res://Inventory/letter_viewer.tscn"]
+open_scenes=["res://Inventory/letter_viewer.tscn", "res://main.tscn", "res://player.tscn"]
 
 [ScriptEditor]
 
