--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -143,10 +143,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 46,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
+"row": 29,
 "scroll_position": 17.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -171,12 +171,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 18,
+"row": 11,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 22,
+"selection_from_line": 11,
+"selection_to_column": 24,
+"selection_to_line": 11,
 "syntax_highlighter": "GDScript"
 }
 
